refactor: ajuste pipeline microserviço com build da imagem docker