@@ -7,9 +7,10 @@
     <version>2.0</version>
     <packaging>jar</packaging>
     <name>customers</name>
-    <!--<repositories>
+    <description>Projeto 11SOAT - Fase 4 - lncr-ms-customer</description>
+    <repositories>
         <repository>
-            <id>github-core</id>
+            <id>lncr-core</id>
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/11soat-f4-lanches-caieiras/lncr-core</url>
             <releases>
@@ -17,34 +18,37 @@
             </releases>
         </repository>
         <repository>
-            <id>github-commons</id>
+            <id>lncr-commons</id>
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/11soat-f4-lanches-caieiras/lncr-commons</url>
             <releases>
                 <updatePolicy>always</updatePolicy>
             </releases>
         </repository>
-    </repositories>-->
-    <description>Projeto 11SOAT - Fase 2</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+    </repositories>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.version>3.4.5</spring-boot.version>
         <mockito.version>5.2.0</mockito.version>
+        <sonar.branch.name>master</sonar.branch.name> <!--fixado branch como master, pois Free Tier do SonarQube aceita somente uma branch-->
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+        <sonar.organization>11soat-f4-lanches-caieiras</sonar.organization>
+        <sonar.projectKey>11soat-f4-lanches-caieiras_lncr-ms-customer</sonar.projectKey>
+        <sonar.sources>src/main</sonar.sources>
+        <!--suppress UnresolvedMavenProperty -->
+        <sonar.token>${SONAR_TOKEN}</sonar.token>
+        <sonar.scm.disabled>true</sonar.scm.disabled>
+        <sonar.coverage.exclusions>
+            br.com.tp.lncr.customer.apis.CustomerRestController,
+            br.com.tp.lncr.customer.config.CustomerConfig,
+            br.com.tp.lncr.customer.datasource.mongo.MongoCustomerRepository
+        </sonar.coverage.exclusions>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            target/site/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -195,16 +199,65 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>
+                        <arg>-Xlint:none</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M9</version>
+                <version>3.0.0</version>
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage=false</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                        <include>**/*TestRunner.java</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <cucumber.junit-platform.naming-strategy>long</cucumber.junit-platform.naming-strategy>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.8.11</version>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <formats>
+                                        <format>XML</format>
+                                    </formats>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <excludes>
+                                <exclude>sun/*</exclude>
+                                <exclude>com/sun/*</exclude>
+                                <exclude>jdk/*</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
